--- a/templates/include/head.html
+++ b/templates/include/head.html
@@ -31,7 +31,7 @@
             {%  if request.session.is_login %}
                 <div class="menu-hd"><a id="mc-menu-hd" href="{% url 'shopcart' %}" target="_top"><i class="am-icon-shopping-cart  am-icon-fw"></i><span>购物车</span><strong id="car_number" class="h">{{ shop_num }}</strong></a></div>
             {% else %}
-                <div class="menu-hd"><a id="mc-menu-hd" href="{% url 'shopcart' %}" target="_top"><i class="am-icon-shopping-cart  am-icon-fw"></i><span>购物车</span><strong id="J_MiniCartNum" class="h">0</strong></a></div>
+                <div class="menu-hd"><a id="mc-menu-hd" href="{% url 'shopcart' %}" target="_top"><i class="am-icon-shopping-cart  am-icon-fw"></i><span>购物车</span><strong id="J_MiniCartNum" class="h"></strong></a></div>
             {% endif %}
             </div>
             <div class="topMessage favorite">
