--- a/templates/personal/information.html
+++ b/templates/personal/information.html
@@ -13,6 +13,7 @@
 {% block script %}
     <script src="{% static 'AmazeUI-2.4.2/assets/js/jquery.min.js' %}"></script>
     <script src="{% static 'AmazeUI-2.4.2/assets/js/amazeui.js' %}"></script>
+
 {% endblock %}
 {% block content %}
     <!--头 -->
@@ -44,6 +45,7 @@
 
                         <div class="info-m">
                             <div><b>用户名：<i>{{ nickname }}</i></b></div>
+                            <div><b>生日：<i>{{ birthday }}</i></b></div>
                             <div class="vip">
                                 <span></span><a href="#">会员专享</a>
                             </div>
@@ -52,7 +54,7 @@
 
                     <!--个人信息 -->
                     <div class="info-main">
-                        <form method="post" action="{% url 'information' %}" class="am-form am-form-horizontal">
+                        <form method="post" name="date" action="{% url 'information' %}" class="am-form am-form-horizontal">
                             {% csrf_token %}
                             <div class="am-form-group">
                                 <label for="user-name2" class="am-form-label">昵称</label>
@@ -102,29 +104,24 @@
                                 <label for="user-birth" class="am-form-label">生日</label>
                                 <div class="am-form-content birth">
                                     <div class="birth-select">
-                                        <select data-am-selected name="year">
-                                            {% for year in year_list %}
-                                                <option value="{{ year }}">{{ year }}</option>
-                                            {% endfor %}
+                                        <select data-am-selected name="year" onchange="selectYear(this.value)" value="{{ year }}">
+                                                <option value="1989">请选择 </option>
                                         </select>
                                         <em>年</em>
                                     </div>
                                     <div class="birth-select2">
-                                        <select data-am-selected name="month">
-                                            {% for month in month_list %}
-                                                <option value="{{ month }}">{{ month }}</option>
-                                            {% endfor %}
-
-
+                                        <select data-am-selected name="month" onchange="selectMonth(this.value)">
+                                            <option value="">选择 </option>
                                         </select>
-                                        <em>月</em></div>
-                                    <div class="birth-select2">
-                                        <select data-am-selected name="day">
-                                            {% for day in day_list %}
-                                                <option value="{{ day }}">{{ day }}</option>
-                                            {% endfor %}
+                                        <em>月</em>
+                                    </div>
+                                    <div class="birth-select2" >
+                                        <select data-am-selected   name="day" >
+                                                <option value="">选择 </option>
                                         </select>
-                                        <em>日</em></div>
+                                        <em>日</em>
+                                    </div>
+                                     <script src="{% static 'js/date.js' %}" type="text/javascript"></script>
                                 </div>
 
                             </div>
