--- a/templates/personal/logistics.html
+++ b/templates/personal/logistics.html
@@ -4,11 +4,11 @@
 		<title>物流</title>
 {% endblock %}
 {% block css %}
-		<link href="../AmazeUI-2.4.2/assets/css/admin.css" rel="stylesheet" type="text/css">
-		<link href="../AmazeUI-2.4.2/assets/css/amazeui.css" rel="stylesheet" type="text/css">
+		<link href="{% static 'AmazeUI-2.4.2/assets/css/admin.css' %}" rel="stylesheet" type="text/css">
+		<link href="{% static 'AmazeUI-2.4.2/assets/css/amazeui.css' %}" rel="stylesheet" type="text/css">
 
-		<link href="../css/personal.css" rel="stylesheet" type="text/css">
-		<link href="../css/lostyle.css" rel="stylesheet" type="text/css">
+		<link href="{% url 'css/personal.css' %}" rel="stylesheet" type="text/css">
+		<link href="{% url 'css/lostyle.css' %}" rel="stylesheet" type="text/css">
 {% endblock %}
 
 {% block content %}
