--- a/templates/personal/safety.html
+++ b/templates/personal/safety.html
@@ -136,7 +136,7 @@
                                         </div>
                                     </div>
                                     <div class="fore3">
-                                        <a href="question.html">
+                                        <a href="{% url 'question' %}">
                                             <div class="am-btn am-btn-secondary">认证</div>
                                         </a>
                                     </div>
