--- a/templates/account/login.html
+++ b/templates/account/login.html
@@ -50,7 +50,7 @@
                         </div>
                         <div class="form-group">
                             <img id="cap_img" src="{{ img_url }}">
-                            <input type="text" name="code" placeholder="请输入验证码" style="width: 50px">
+                            <input type="text" name="code" placeholder="请输入验证码" >
 
                             <input id="cap_key" type="hidden" name="key" value="{{ key }}">
                             {% if capt_error %}
