更新订单管理。。。

--- a/templates/shopcart/shopcart.html
+++ b/templates/shopcart/shopcart.html
@@ -82,7 +82,7 @@
                     <section class="my_model">
                         <p class="title">删除宝贝<span class="closeModel">X</span></p>
                         <p>您确认要删除该宝贝吗？</p>
-                        <div class="opBtn"><a href="javascript:;" class="dialog-sure" cartid="{{ shop_cart.cart_id }}" shopid="{{ shop_cart.shop_id }}">确定</a><a href="javascript:;" class="dialog-close">关闭</a></div>
+                        <div class="opBtn"><a href="javascript:;" class="dialog-sure" cartid="{{ shop_cart.cart_id }}">确定</a><a href="javascript:;" class="dialog-close">关闭</a></div>
                     </section>
                 </ul>
                 {% endfor %}
