添加实名认证模块,还没做

--- a/templates/personal/safety.html
+++ b/templates/personal/safety.html
@@ -122,7 +122,7 @@
                                         </div>
                                     </div>
                                     <div class="fore3">
-                                        <a href="idcard.html">
+                                        <a href="{% url 'idcard' %}">
                                             <div class="am-btn am-btn-secondary">认证</div>
                                         </a>
                                     </div>
