--- a/templates/account/login.html
+++ b/templates/account/login.html
@@ -70,14 +70,14 @@
                     <br/>
                 </div>
 
-                <div class="partner">
-                    <h3>合作账号</h3>
-                    <div class="am-btn-group" style="height: 60px">
-                        <li><a href="#"><i class="am-icon-qq am-icon-sm" style="height: 30px"></i><span>QQ登录</span></a></li>
-                        <li><a href="#"><i class="am-icon-weibo am-icon-sm" style="height: 30px"></i><span>微博登录</span> </a></li>
-                        <li><a href="#"><i class="am-icon-weixin am-icon-sm" style="height: 30px"></i><span>微信登录</span> </a></li>
-                    </div>
-                </div>
+{#                <div class="partner">#}
+{#                    <h3>合作账号</h3>#}
+{#                    <div class="am-btn-group" style="height: 60px">#}
+{#                        <li><a href="#"><i class="am-icon-qq am-icon-sm" style="height: 30px"></i><span>QQ登录</span></a></li>#}
+{#                        <li><a href="#"><i class="am-icon-weibo am-icon-sm" style="height: 30px"></i><span>微博登录</span> </a></li>#}
+{#                        <li><a href="#"><i class="am-icon-weixin am-icon-sm" style="height: 30px"></i><span>微信登录</span> </a></li>#}
+{#                    </div>#}
+{#                </div>#}
             </div>
         </div>
     </div>
