--- a/templates/account/register.html
+++ b/templates/account/register.html
@@ -95,7 +95,7 @@
                                 $('#doc-my-tabs').tabs();
                             })
                         </script>
-                        <a href="{% url 'login' %}">已有账号,点击登录</a>
+{#                        <a href="{% url 'login' %}">已有账号,点击登录</a>#}
                     </div>
                 </div>
             </div>
