--- a/templates/include/head.html
+++ b/templates/include/head.html
@@ -49,7 +49,7 @@
         </div>
         <div class="search-bar pr">
             <a name="index_none_header_sysc" href="#"></a>
-            <form action="{% url "search" %}" method="get">
+            <form action="{% url "searching" %}" method="get">
                 <input id="searchInput" name="keyword" type="text" placeholder="搜索" autocomplete="off">
                 <input id="ai-topsearch" class="submit am-btn" value="搜索" index="1" type="submit">
             </form>
