--- a/templates/search_key/search_key.html
+++ b/templates/search_key/search_key.html
@@ -12,7 +12,6 @@
 
 {% block content %}
 {% include 'include/head.html' %}
-
 			<div class="clear"></div>
 			<b class="line"></b>
            <div class="search">
@@ -62,20 +61,21 @@
 										<dt class="am-badge am-round">品牌</dt>	
 									
 										 <div class="dd-conent">										
-											<dd class="select-all selected"><a href="{% url 'search' %}?id={{ bid }}&brand_name&pt&pt2&pt3&pt4&px&pc&pj">全部</a></dd>
-                                    {#分类#}
-                                             {% for brand in brand_list %}
-                                            <dd><a href="{% url 'search' %}?id={{ brand.third_cate_id.third_cate_id}}&brand_name={{ brand.brand_name }}&pt={{ bpt }}&pt2={{ bpt2 }}&pt3={{ bpt3 }}&pt4={{ bpt4 }}&px={{ px1 }}&pc={{ px2 }}&pj={{ px3 }}">{{ brand.brand_name }}</a></dd>
+											<dd class="select-all selected"><a href="{% url 'searching' %}?id={{ shop_id }}&brand_name&pt&pt2&pt3&pt4&px&pc&pj">全部</a></dd>
+                                {# 分类#}
+{#                                             {% for shop in shop_list %}#}
+                                                 {% for brand in brand_list %}
+                                            <dd><a href="{% url 'searching' %}?brand_id={{ brand.brand_id}}&keyword={{ brand_name }}&pt={{ bpt }}&pt2={{ bpt2 }}&pt3={{ bpt3 }}&pt4={{ bpt4 }}&px={{ px1 }}&pc={{ px2 }}&pj={{ px3 }}">{{ brand.brand_name }}</a></dd>
                                              {% endfor %}
 										 </div>
 									</dl>
                                     <dl id="select1">
                                         <dt class="am-badge am-round">价格</dt>
                                         <div>
-                                            <dd><a href="{% url 'search' %}?id={{ bid }}&pt=1&brand_name={{ bname }}&pt2&pt3&pt4&px={{ px1 }}&pc={{ px2 }}&pj={{ px3 }}">小于1000</a></dd>
-                                            <dd><a href="{% url 'search' %}?id={{ bid }}&pt2=1&brand_name={{ bname }}&pt&pt3&pt4&px={{ px1 }}&pc={{ px2 }}&pj={{ px3 }}">1000~2000</a></dd>
-                                            <dd><a href="{% url 'search' %}?id={{ bid }}&pt3=1&brand_name={{ bname }}&pt&pt2&pt4&px={{ px1 }}&pc={{ px2 }}&pj={{ px3 }}">2000~3000</a></dd>
-                                            <dd><a href="{% url 'search' %}?id={{ bid }}&pt4=1&brand_name={{ bname }}&pt&pt2&pt3&px={{ px1 }}&pc={{ px2 }}&pj={{ px3 }}">3000以上</a></dd>
+                                            <dd><a href="{% url 'searching' %}?id={{ bid }}&pt=1&keyword={{ bname }}&pt2&pt3&pt4&px={{ px1 }}&pc={{ px2 }}&pj={{ px3 }}">小于1000</a></dd>
+                                            <dd><a href="{% url 'searching' %}?id={{ bid }}&pt2=1&keyword={{ bname }}&pt&pt3&pt4&px={{ px1 }}&pc={{ px2 }}&pj={{ px3 }}">1000~2000</a></dd>
+                                            <dd><a href="{% url 'searching' %}?id={{ bid }}&pt3=1&keyword={{ bname }}&pt&pt2&pt4&px={{ px1 }}&pc={{ px2 }}&pj={{ px3 }}">2000~3000</a></dd>
+                                            <dd><a href="{% url 'searching' %}?id={{ bid }}&pt4=1&keyword={{ bname }}&pt&pt2&pt3&px={{ px1 }}&pc={{ px2 }}&pj={{ px3 }}">3000以上</a></dd>
                                         </div>
                                     </dl>
 
@@ -86,13 +86,13 @@
                         </div>
 							<div class="search-content">
 								<div class="sort">
-									<li class="first"><a title="综合" href="{% url 'search' %}?id={{ bid }}&brand_name={{ bname }}&pt={{ bpt }}&pt2={{ bpt2 }}&pt3={{ bpt3 }}&pt4={{ bpt4 }}&px&pc&pj">综合排序</a>
-									<li><a title="销量" href="{% url 'search' %}?id={{ bid }}&px=1&brand_name={{ bname }}&pt={{ bpt }}&pt2={{ bpt2 }}&pt3={{ bpt3 }}&pt4={{ bpt4 }}&pc&pj">销量排序</a></li>
-									<li><a title="价格" href="{% url 'search' %}?id={{ bid }}&pc=1&brand_name={{ bname }}&pt={{ bpt }}&pt2={{ bpt2 }}&pt3={{ bpt3 }}&pt4={{ bpt4 }}&px&pj">价格优先</a></li>
-									<li class="big"><a title="评价" href="{% url 'search' %}?id={{ bid }}&pj=1&brand_name={{ bname }}&pt={{ bpt }}&pt2={{ bpt2 }}&pt3={{ bpt3 }}&pt4={{ bpt4 }}&px&pc">评价为主</a></li>
+									<li class="first"><a title="综合" href="{% url 'searching' %}?id={{ bid }}&brand_name={{ bname }}&pt={{ bpt }}&pt2={{ bpt2 }}&pt3={{ bpt3 }}&pt4={{ bpt4 }}&px&pc&pj">综合排序</a>
+									<li><a title="销量" href="{% url 'searching' %}?id={{ bid }}&px=1&keyword={{ bname }}&pt={{ bpt }}&pt2={{ bpt2 }}&pt3={{ bpt3 }}&pt4={{ bpt4 }}&pc&pj">销量排序</a></li>
+									<li><a title="价格" href="{% url 'searching' %}?id={{ bid }}&pc=1&keyword={{ bname }}&pt={{ bpt }}&pt2={{ bpt2 }}&pt3={{ bpt3 }}&pt4={{ bpt4 }}&px&pj">价格优先</a></li>
+									<li class="big"><a title="评价" href="{% url 'searching' %}?id={{ bid }}&pj=1&keyword={{ bname }}&pt={{ bpt }}&pt2={{ bpt2 }}&pt3={{ bpt3 }}&pt4={{ bpt4 }}&px&pc">评价为主</a></li>
 								</div>
 								<div class="clear"></div>
-
+                            {#商品展示#}
 								<ul class="am-avg-sm-2 am-avg-md-3 am-avg-lg-4 boxes">
                                     {% for shop in contacts %}
 									<li>
@@ -164,15 +164,15 @@
 							<!--分页功能 -->
 							<ul class="am-pagination am-pagination-right">
                             {% if contacts.has_previous  %}
-                            <li ><a  href="?id={{ bid }}&page={{ contacts.previous_page_number }}&px=1&brand_name={{ bname }}&pt={{ bpt }}&pt2={{ bpt2 }}&pt3={{ bpt3 }}&pt4={{ bpt4 }}">&laquo;上一页</a></li>
+                            <li ><a  href="?page={{ contacts.previous_page_number }}&px=1&keyword={{ kw }}&pt={{ bpt }}&pt2={{ bpt2 }}&pt3={{ bpt3 }}&pt4={{ bpt4 }}">&laquo;上一页</a></li>
                             {% else %}
                             <li class="am-disabled"><a>&laquo;上一页</a></li>
                             {% endif %}
                             {% for pindex in pages %}
-                            <li {% if pindex == contacts.number %}class="am-active"{% endif %}><a href="?id={{ bid }}&page={{ pindex }}&px=1&brand_name={{ bname }}&pt={{ bpt }}&pt2={{ bpt2 }}&pt3={{ bpt3 }}&pt4={{ bpt4 }}" >{{ pindex }}</a></li>
+                            <li {% if pindex == contacts.number %}class="am-active"{% endif %}><a href="?page={{ pindex }}&px=1&keyword={{ kw }}&pt={{ bpt }}&pt2={{ bpt2 }}&pt3={{ bpt3 }}&pt4={{ bpt4 }}" >{{ pindex }}</a></li>
                             {% endfor %}
                             {% if contacts.has_next %}
-                            <li><a href="?id={{ bid }}&page={{ contacts.next_page_number }}&px=1&brand_name={{ bname }}&pt={{ bpt }}&pt2={{ bpt2 }}&pt3={{ bpt3 }}&pt4={{ bpt4 }}">下一页&raquo;</a></li>
+                            <li><a href="?page={{ contacts.next_page_number }}&px=1&keyword={{ kw }}&pt={{ bpt }}&pt2={{ bpt2 }}&pt3={{ bpt3 }}&pt4={{ bpt4 }}">下一页&raquo;</a></li>
                             {% else %}
                             <li class="am-disabled"><a>下一页&raquo;</a></li>
                             {% endif %}
